--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto' rel='stylesheet' type='text/css'>
 		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
+		<link rel="apple-touch-icon" href="favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<meta http-equiv="public" content="max-age=691200" />
