added Bonsačica posters to side projects section

--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -187,14 +187,23 @@
 
 					<div class="my-work-item--side-projects-container">
 						<div class="my-work-item__side-project">
-							<a href="side_project--walnut.html">
-								<div id="walnut-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_walnut.png">
-									<img id="walnut-img-placeholder" class="img-small" src="resources/images/side_project_logo_walnut_PLACEHOLDER.png">
+							<a target="_blank" href="http://accessible-colors.com/">
+								<div id="ac-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_accessible_colors.png">
+									<img id="ac-img-placeholder" class="img-small" src="resources/images/side_project_logo_accessible_colors_PLACEHOLDER.png">
 									<div style="padding-bottom: 100%;"></div>
 								</div>
-								<script type="text/javascript">lazyLoadImage('walnut-img-container','walnut-img-placeholder','Walnut Art App logo – view side project details');</script>
-
-								<span class="side-project-name"><span>Walnut Art iOS App</span></span>
+								<script type="text/javascript">lazyLoadImage('ac-img-container','ac-img-placeholder','Accessible Colours logo – go to project site');</script>
+								<span class="side-project-name"><span>accessible-colors.com</span></span>
+							</a>
+						</div>
+						<div class="my-work-item__side-project">
+							<a target="_blank" href="http://www.bosancica-posters.com/">
+								<div id="bosancica-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_bosancica.png">
+									<img id="bosancica-img-placeholder" class="img-small" src="resources/images/side_project_logo_bosancica_PLACEHOLDER.png">
+									<div style="padding-bottom: 100%;"></div>
+								</div>
+								<script type="text/javascript">lazyLoadImage('bosancica-img-container','bosancica-img-placeholder','Bosančica Posters logo – go to side project site');</script>
+								<span class="side-project-name"><span>Bosančica Posters</span></span>
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
@@ -208,13 +217,13 @@
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
-							<a target="_blank" href="http://accessible-colors.com/">
-								<div id="ac-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_accessible_colors.png">
-									<img id="ac-img-placeholder" class="img-small" src="resources/images/side_project_logo_accessible_colors_PLACEHOLDER.png">
+							<a href="side_project--walnut.html">
+								<div id="walnut-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_walnut.png">
+									<img id="walnut-img-placeholder" class="img-small" src="resources/images/side_project_logo_walnut_PLACEHOLDER.png">
 									<div style="padding-bottom: 100%;"></div>
 								</div>
-								<script type="text/javascript">lazyLoadImage('ac-img-container','ac-img-placeholder','Accessible Colours logo – go to project site');</script>
-								<span class="side-project-name"><span>accessible-colors.com</span></span>
+								<script type="text/javascript">lazyLoadImage('walnut-img-container','walnut-img-placeholder','Walnut Art App logo – view side project details');</script>
+								<span class="side-project-name"><span>Walnut Art iOS App</span></span>
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
