adding RxViz to side projects

--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -206,6 +206,17 @@
 								<span class="side-project-name"><span>Bosančica Posters</span></span>
 							</a>
 						</div>
+
+						<div class="my-work-item__side-project">
+							<a target="_blank" href="http://rxviz.com/">
+								<div id="rxviz-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_rxviz.png">
+									<img id="rxviz-img-placeholder" class="img-small" src="resources/images/side_project_logo_rxviz_PLACEHOLDER.png">
+									<div style="padding-bottom: 100%;"></div>
+								</div>
+								<script type="text/javascript">lazyLoadImage('rxviz-img-container','rxviz-img-placeholder','RxViz logo – go to side project site');</script>
+								<span class="side-project-name"><span>rxviz.com</span></span>
+							</a>
+						</div>
 						<div class="my-work-item__side-project">
 							<a target="_blank" href="http://react-autosuggest.js.org/">
 								<div id="react-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_react_auto-suggest.png">
