playing with flexbox

--- a/z.html
+++ b/z.html
@@ -4,6 +4,7 @@
 		<title>z</title>
 		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="http://www.vedran.io/css/app.css">
+		<link rel="stylesheet" type="text/css" href="http://localhost:3000/css/app.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto' rel='stylesheet' type='text/css'>
 		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 
@@ -11,16 +12,20 @@
 		<meta http-equiv="public"/>
 	</head>
 	<body>
-		<div class="z-nav">
-			<div class="z-header">
+		<div class="z-nav-header-content">
+			<div class="z-nav">Menu</div>
+			<div class="z-header-content">
+				<div class="z-header">
+					<div class="z-header__menu">Menu</div>
+					Header
+				</div>
 				<div class="z-content">
-					<div class="z-row">
-						<div class="z-card"></div>
-						<div class="z-card"></div>
-					</div>
 					<div class="z-col">
-						<div class="z-card"></div>
-					</div>
+						<div class="z-row">
+							<div class="z-card">Card 1</div>
+							<div class="z-card">Card 2</div>
+						</div>
+						<div class="z-card">Card 3</div>
 					</div>
 				</div>
 			</div>
