--- a/z.html
+++ b/z.html
@@ -13,10 +13,10 @@
 	</head>
 	<body>
 		<div class="z-nav-header-content">
-			<div class="z-nav">Menu</div>
+			<div class="z-nav">M E N U</div>
 			<div class="z-header-content">
 				<div class="z-header">
-					<div class="z-header__menu">Menu</div>
+					<div class="z-header__menu">M E N U</div>
 					Header
 				</div>
 				<div class="z-content">
