fix vedas background

--- a/vedmas/index.html
+++ b/vedmas/index.html
@@ -13,7 +13,7 @@
 
 </script>
 
-<body style = "background:URL(http://1-background.com/images/xmas/christmas-snowflake-green-background.jpg)">
+<body style = "background:url(http://1-background.com/images/xmas/christmas-snowflake-green-background.jpg)">
 <H1 Style = "color:red;font-size:60px; text-shadow: 0px 2px 2px rgba(150, 150, 150, 1);">Merry Vedmas Everybody</H1>
 <img src="vedmas.jpg" />
 <img src="vedmas.PNG" />
@@ -24,14 +24,14 @@
 	We wish you a Merry Vedmas and a Happy New Year. <br>
 	Good web flows we bring to your job seekin'; <br>
 	Good web flows from Vedmas and a bike with one gear <br><br>
-	
+
 	Oh, bring us a friendly drop-down; <br>
 	Oh, bring us a mega menu; <br>
 	A user friendly drop-down and a mega menu <br>
 	We wire frame until we get some; <br>
 	We user test to find the best one; <br>
 	We ride home just in gear one, cause hipsters are cool <br><br>
-	
+
 	We wish you a Merry Vedmas; <br>
 	We wish you a Merry Vedmas; <br>
 	We wish you a Merry Vedmas and a bike with one gear <br>
