--- a/vedmas/index.html
+++ b/vedmas/index.html
@@ -1,20 +1,22 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
 	<title>Xmas @ Vedran's</title>
+	<link rel="stylesheet" type="text/css" href="../css/app.css">
 </head>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<script async>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-56754917-1', 'auto');
-  ga('send', 'pageview');
+	ga('create', 'UA-84060845-1', 'auto');
+	ga('send', 'pageview');
 
 </script>
 
-<body style = "background:url(http://1-background.com/images/xmas/christmas-snowflake-green-background.jpg)">
-<H1 Style = "color:red;font-size:60px; text-shadow: 0px 2px 2px rgba(150, 150, 150, 1);">Merry Vedmas Everybody</H1>
+<!-- <body style = "background:url(http://1-background.com/images/xmas/christmas-snowflake-green-background.jpg)"> -->
+<body class="vedmas">
+<h1 style = "padding-top:40px;color:red;font-size:60px; text-shadow: 0px 2px 2px rgba(150, 150, 150, 1);">Merry Vedmas Everybody</H1>
 <img src="vedmas.jpg" />
 <img src="vedmas.PNG" />
 
