--- a/about_vedran.html
+++ b/about_vedran.html
@@ -29,7 +29,7 @@
 			<div class="section__content section--top-of-page section--last-in-section">
 				<h1 class="h1-heading">About me</h1>
 					<p>I am a designer with over 10 years’ experience, focusing on user experience design, usability and interface design.</p>
-					<p>I am currently working as a Senior UX Designer at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://seek.com.au">SEEK</a>.</p>
+					<p>I am currently working as a Senior Product Designer at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://zendesk.com">Zendesk</a>.</p>
 
 			</div>
 		</div>
