Updating CV for Zendesk

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<div class="section__content">
 				<h2 class="h2-heading">My resumé</h2>
 					<p class="paragraph__home">This site contains examples of my work, showing how I approach design. If you're after a more traditional resumé, you can access it below.</p>
-				<a class ="link link--on-light-bg" href="http://www.vedran.io/resources/documents/Vedran-Arnautovic–Resume-2017.pdf" target="_blank">View my resumé (pdf)</a>
+				<a class ="link link--on-light-bg" href="http://www.vedran.io/resources/documents/Vedran-Arnautovic–Resume.pdf" target="_blank">View my resumé (pdf)</a>
 			</div>
 		</div>
 
