--- a/about_vedran.html
+++ b/about_vedran.html
@@ -28,8 +28,8 @@
 		<div class="section">
 			<div class="section__content section--top-of-page section--last-in-section">
 				<h1 class="h1-heading">About me</h1>
-					<p>I am a designer with over 10 years’ experience, focusing on user experience design, usability and interface design.</p>
-					<p>I am currently working as a Senior Product Designer at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://zendesk.com">Zendesk</a>.</p>
+					<p>I am a designer with over 10 years’ experience, focusing on user experience design, design systems, usability and interface design.</p>
+					<p>I am currently working as a Lead Product Designer at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://zendesk.com">Zendesk</a>.</p>
 
 			</div>
 		</div>
@@ -57,7 +57,7 @@
 			<div class="sub-section__content">
 					<h2 class="h2-heading">My focus today</h2>
 
-					<p>The evolution of my design process and the process of the teams I work with, is a major interest of mine. I am focused on experimenting with, and continuously improving these processes.</p>
+					<p>The evolution of my design process and the process of the teams I work with, is a major interest of mine. I am focused on experimenting with, and continuously improving these processes. This has led me to get involved in the development of design systems, including at my current employer, Zendesk.</p>
 
 					<p>I am a big advocate for the use of modern design tools, collaborative design practices and early and continued involvement of users in the design process.</p>
 
@@ -111,10 +111,10 @@
 				"name": "Vedran Arnautovic",
 				"address": "Melbourne, Australia",
 				"homeLocation": "Melbourne, Australia",
-				"jobTitle": "Senior User Experience Designer",
+				"jobTitle": "Lead Product Designer",
 				"workLocation": "Melbourne, Australia",
-				"worksFor": "SEEK.com.au",
-				"description": "Designer with over 10 years’ experience, focusing on user experience design, usability and interface design.",
+				"worksFor": "Zendesk",
+				"description": "Designer with over 10 years’ experience, focusing on user experience design, design systems, usability and interface design.",
 				"Nationality": "Australia",
 				"birthPlace": "Sarajevo",
 				"colleague": "https://au.linkedin.com/in/cameronrogers",
