--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
 		    "name": "Vedran Arnautovic",
 				"address": "Melbourne, Australia",
 				"homeLocation": "Melbourne, Australia",
-				"jobTitle": "Senior User Experience Designer",
+				"jobTitle": "Lead Product Designer",
 				"workLocation": "Melbourne, Australia",
-				"worksFor": "SEEK.com.au",
+				"worksFor": "Zendesk",
 				"description": "Designer with over 10 years’ experience, focusing on user experience design, usability and interface design.",
 				"Nationality": "Australia",
 				"birthPlace": "Sarajevo",
