Updated layout to center the tennis results chart

--- a/tennis/vedran-vs-luke.html
+++ b/tennis/vedran-vs-luke.html
@@ -10,7 +10,7 @@
 			<h1 class="h1-heading">Tennis scores</h1>
 			<h2 class="h2-heading">Vedran vs Luke (2018)</h2>
 			<div class="tennisChartWrapper">
-				<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRBNl1S-5zEtXM_GNX9fTeEI2WXu_-2Fo1V02P8rLb81YW0RV1yvjIjV21jIraPdwkMTrWkiXFIdBlA/pubchart?oid=485940709&amp;format=image"></iframe>
+				<iframe frameborder="0" allowfullscreen src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRBNl1S-5zEtXM_GNX9fTeEI2WXu_-2Fo1V02P8rLb81YW0RV1yvjIjV21jIraPdwkMTrWkiXFIdBlA/pubchart?oid=485940709&amp;format=image"></iframe>
 			</div>
 		</div>
 	</div>
